tests/syntax_error/no_break_space.jou
   # Error: source file contains Unicode whitespace character U+000000a0 NO-BREAK SPACE
